--- a/src/Home.css
+++ b/src/Home.css
@@ -1,6 +1,6 @@
-.home_image {
+.basicSlider {
     width: 100%;
     z-index: -1;
-    margin-bottom: -150px;
-    /* mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)); */
+    margin-bottom: -450px;
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
